creating first pull request to confirm from local branch-Pramod

--- a/playlistofchoice/templates/index.html
+++ b/playlistofchoice/templates/index.html
@@ -7,6 +7,6 @@
   <title>One Space</title>
 </head>
 <body>
-  <h1> Personalized Music Space for Every One</h1>
+  <h1> Welcome to Personalized Music Space </h1>
 </body>
 </html>
