pushing the homepage changes - Added Login with Spotify Link

--- a/playlistofchoice/templates/genreandmood.html
+++ b/playlistofchoice/templates/genreandmood.html
@@ -15,7 +15,7 @@
 
       {% for categories in category_list %}
 
-      <a href="{{categories.category_link}}"><img class="img-responsive" src="{{categories.category_image}}" alt="{{categories.category_name}}"> <span> {{categories.category_name}}</span> </a>
+      <a href="{{categories.category_link}}"><img class="img-responsive" src="{{categories.category_image}}" alt="{{categories.category_name}}"></a>
 
       {% endfor %}
     </div>
