--- a/playlistofchoice/static/css/style.css
+++ b/playlistofchoice/static/css/style.css
@@ -1,7 +1,3 @@
-html, body{
-  background-color: white;
-  height: 1000px;
-}
 
 /***************************************************         NavBar Styling      *************************************************** */
 
@@ -14,7 +10,7 @@ html, body{
   padding: 0 !important;
 }
 .navbar {
-  background: #fff;
+  background-color: black;
   padding-left: 16px;
   padding-right: 16px;
   border-radius: 0;
@@ -209,10 +205,32 @@ html, body{
 }
 /***************************************************END*************************************************** */
 
+/*************************************************  Genre & MOODS Styling ******************************************************************************** */
 
+ /***************************  NavBar Styling ******************/
+
+ html {
+   background: radial-gradient(#1B2735 0%, #090A0F auto);
+ }
+
+.container-2{
+  background-color: black;
+}
+
+.navbar{
+  padding-left: 5rem;
+  padding-right: 4rem;
+}
+
+
+.bar{
+  margin-left: 80rem;
+}
 
 
 .content {
+  margin-top: 100px;
+  position: relative;
   display: inline-block;
   margin-left: 120px;
   width: 1600px;
