--- a/playlistofchoice/templates/genreandmood.html
+++ b/playlistofchoice/templates/genreandmood.html
@@ -4,22 +4,36 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title> GENRE & MOODS </title>
   {% load static %}
-  <link rel="stylesheet" href="{% static  '/css/style.css' %}">
+  <title> GENRE & MOODS </title>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/css/bootstrap-select.min.css">
+  <link rel="stylesheet" href="{% static '/css/style.css' %}">
+  <link rel="shortcut icon" type="image/png" href="{% static '/img/favicon.ico' %}"/>
+  <script src="/static/js/app.js" defer></script>
 </head>
 <body>
   <div class="container-2">
-    <h2> GENRE & MOODS </h2>
+    <nav <nav class="navbar navbar-expand-sm fixed-top navbar-dark bg-dark">
+      <h5 style="color: white"> GENRE & MOODS </h5>
+      <a class="bar" href="/"><button type="button" class="btn btn-pill btn-dark btn-sm"><span class="cil-contrast btn-icon mr-2"><//span> Go Home </button></a>
+    </nav>
+
+
     <div class="content">
 
-      {% for categories in category_list %}
+      {% for categories in genre_list %}
 
       <a href="{{categories.category_link}}"><img class="img-responsive" src="{{categories.category_image}}" alt="{{categories.category_name}}"></a>
 
       {% endfor %}
+
     </div>
   </div>
-
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 </body>
 </html>
