--- a/playlistofchoice/templates/add_song.html
+++ b/playlistofchoice/templates/add_song.html
@@ -4,10 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    {% load static %}
   <title>One Space</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+  <link rel="stylesheet" href="{% static 'css/background.css' %}">
+
 </head>
-<body class="bg-dark">
+<body>
     <div class="container mx-auto w-50 p-5">
         <form action="/new_song_in_playlist" method="post">
             {% csrf_token %}
