--- a/playlistofchoice/templates/home.html
+++ b/playlistofchoice/templates/home.html
@@ -28,7 +28,7 @@
   	<!-- Collection of nav links, forms, and other content for toggling -->
   	<div id="navbarCollapse" class="collapse navbar-collapse justify-content-start">
   		<ul class="nav navbar-nav navbar-right ml-auto">
-        <a class="spot" href="#" style="color: whitesmoke">Login with Spotify</a>
+        <a class="spot" href="/sign_in" style="color: whitesmoke">Login with Spotify</a>
   			<li class="nav-item">
   				<a data-toggle="dropdown" class="nav-link dropdown-toggle" href="/" style="color: whitesmoke"> Login </a>
   				<ul class="dropdown-menu form-wrapper">
@@ -96,7 +96,7 @@
   </div>
   <div class="container">
     <div class="row">
-      <form class="search" action="/results" method="POST">
+      <form class="search" action="/search_track" method="POST">
         {% csrf_token %}
         <input class="form-control" type="text" name="track" placeholder="Search For Your Favorite Song!!">
         <button class="btn btn-info" type="submit" name="button" > Search </button>
@@ -107,9 +107,8 @@
         </button>
         <div class="dropdown-menu">
           <a class="dropdown-item" href="/genreresult">GENRE & MOODS</a>
-          <a class="dropdown-item" href="/newrelease">NEW RELEASES</a>
-          <a class="dropdown-item" href="/chart">CHARTS</a>
-          <a class="dropdown-item" href="/concert">CONCERTS</a>
+          <a class="dropdown-item" href="/newreleases">NEW RELEASES</a>
+          <a class="dropdown-item" href="/get_playlists">YOUR PLAYLISTS</a>
         </div>
      </div>
     </div>
